// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`T.defaultTemplateForType() generates correct representation of type with initial value 1`] = `
Object {
  "description": undefined,
  "icon": [Function],
  "id": "post",
  "parameters": undefined,
  "schemaType": "post",
  "title": "Post",
  "value": Object {
    "_type": "post",
  },
}
`;

exports[`T.defaultTemplateForType() generates correct representation of type without initial value 1`] = `
Object {
  "description": undefined,
  "icon": [Function],
  "id": "author",
  "parameters": undefined,
  "schemaType": "author",
  "title": "Author",
  "value": [Function],
}
`;

exports[`T.defaults() generates array of all schema type templates 1`] = `
Array [
  TemplateBuilder {
    "spec": Object {
      "icon": [Function],
      "id": "author",
      "schemaType": "author",
      "title": "Author",
      "value": [Function],
    },
  },
  TemplateBuilder {
    "spec": Object {
      "icon": [Function],
      "id": "post",
      "schemaType": "post",
      "title": "Post",
      "value": Object {
        "_type": "post",
      },
    },
  },
]
`;

exports[`T.defaults() generates array of all schema type templates 2`] = `
Array [
  Object {
    "description": undefined,
    "icon": [Function],
    "id": "author",
    "parameters": undefined,
    "schemaType": "author",
    "title": "Author",
    "value": [Function],
  },
  Object {
    "description": undefined,
    "icon": [Function],
    "id": "post",
    "parameters": undefined,
    "schemaType": "post",
    "title": "Post",
    "value": Object {
      "_type": "post",
    },
  },
]
`;

exports[`T.template() builds template through constructor 1`] = `
Object {
  "description": undefined,
  "icon": [Function],
  "id": "foo",
  "parameters": undefined,
  "schemaType": "author",
  "title": "some title",
  "value": Object {
    "name": "Default name!",
  },
}
`;

exports[`T.template() can construct using builder 1`] = `
Object {
  "description": undefined,
  "icon": [Function],
  "id": "yeah",
  "parameters": undefined,
  "schemaType": "author",
  "title": "Yeah",
  "value": Object {
    "name": "bar",
  },
}
`;
